compiler/tests/en/errors/match_variant_pattern_kind.salam
// EXPECT: E076
func main:
    x := 1
    v := match x:
        1 =>: ret 42 end
        else =>: ret "s" end
    end
    match v:
        42 =>: println "forty-two" end
        else =>: println "other" end
    end
end
